# ecommerce

./: .gitignore  diagram.py  docker-compose.debug.yml  docker-compose.yaml  docker-compose.yml  readme.md
ecommerce/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt
ecommerce/accounts/: models.py  serializers.py  views.py
ecommerce/ecommerce/: asgi.py  celeryconf.py  urls.py  wsgi.py
ecommerce/ecommerce/accounts/: admin.py  apps.py  authentication.py  emails.py  exceptions.py  jwt.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
ecommerce/ecommerce/accounts/tests/: test_accounts.py  test_emails.py  test_jwt.py
ecommerce/ecommerce/settings/: __init__.py  base.py  local.py
